--- a/calculations/linearized_equations.tex
+++ b/calculations/linearized_equations.tex
@@ -103,15 +103,15 @@ Derivations in cylindrical coordinates, explicitly done to see how the scale fac
 		\omega \rho_0 T_1 &= -i\rho_0v_1T_0' +\rho_0\left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)T_1 - i(\gamma - 1)\rho_0T_0\left[\frac{1}{r}(rv_1)' + \frac{1}{r}ik_2v_2 + ik_3v_3\right]												\\
 						  &~~~~ - i(\gamma - 1)(\kappa_\parallel - \kappa_\bot)\frac{1}{B^2}\left(\frac{1}{r}k_2B_{02} + k_3B_{03}\right)^2T_1 + i(\gamma - 1)\frac{1}{r}(r\kappa_\bot T_1')'											\\
 					      &~~~~ - i(\gamma - 1)\kappa_\bot\left(\frac{1}{r^2}k_2^2 + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{r}(r\kappa_{\bot, 1}T_0')'																					\\
-						  &~~~~ + i(\gamma - 1)(\kappa_\bot - \kappa_\parallel)\frac{1}{B^2}\left[(B_{03}k_3^2 + B_{02}k_2k_3)a_2 - \frac{1}{r}(B_{02}k_2^2 + B_{03}k_2k_3)a_3\right]													\\
+						  &~~~~ + i(\gamma - 1)(\kappa_\bot - \kappa_\parallel)\frac{1}{B^2}T_0'\left[(B_{03}k_3^2 + B_{02}k_2k_3)a_2 - \frac{1}{r}(B_{02}k_2^2 + B_{03}k_2k_3)a_3\right]													\\
 						  &~~~~ - i(\gamma - 1)\rho_1\HL_0 - i(\gamma - 1)\rho_0(\HL_T T_1 + \HL_\rho \rho_1)																															\\
 						  &~~~~ +2i(\gamma - 1)\eta\left\{B_{03}'\left[\left(\frac{1}{r}\left((ra_2)' - ik_2a_1\right)\right)' + \frac{1}{r}k_2k_3a_3 - k_3^2a_2\right]\right.															\\
-						  &~~~~ \left. \qquad\qquad\qquad  ~ -\frac{(rB_{02})'}{r^2}\left[\left(r(a_3' - ik_2a_1)\right)' + k_2k_3a_2 - \frac{1}{r}k_2^2a_3\right] \right\} 															\\
+						  &~~~~ \left. \qquad\qquad\qquad  ~ -\frac{(rB_{02})'}{r^2}\left[\left(r(a_3' - ik_3a_1)\right)' + k_2k_3a_2 - \frac{1}{r}k_2^2a_3\right] \right\} 															\\
 						  &~~~~ + i(\gamma - 1)\frac{d\eta}{dT}T_1\left[B_{02}'^2 + B_{03}'^2 + 2\frac{r'}{r}B_{02}B_{02}' + \left(\frac{r'}{r}B_{02}\right)^2\right]												      				\\[8pt]
 		\omega a_1		  &= iB_{03}v_2 - iB_{02}v_3 + iv_{02}a_2' + iv_{03}a_3' + \left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)a_1 + i\frac{1}{r}v_{02}a_2																				\\
 						  &~~~~ + \eta\left[-\left(\frac{k_2^2}{r^2} + k_3^2\right) ia_1 + \frac{k_2}{r^2}(ra_2)' + k_3a_3'\right]							  																			\\[8pt]
 		\omega a_2		  &= -iB_{03}v_1 - \left(\frac{1}{r}k_2a_3 - k_3a_2\right)v_{03} + i\eta\left\{\left[\frac{1}{r}\left((ra_2)' - ik_2a_1\right)\right]' + \frac{1}{r}k_2k_3a_3 - k_3^2a_2\right\} + i\frac{d\eta}{dT}T_1B_{03}'	\\[8pt]
-		\omega a_3		  &=  iB_{02}v_1 - \left(k_3a_2 - \frac{1}{r}k_2a_3\right)v_{02} + i\frac{\eta}{r}\left\{\left[r(a_3' - ik_2a_1)\right]' + k_2k_3a_2 - \frac{1}{r}k_2^2a_3\right\} - i\frac{d\eta}{dT}\frac{T_1}{r}(rB_{02})'	
+		\omega a_3		  &=  iB_{02}v_1 - \left(k_3a_2 - \frac{1}{r}k_2a_3\right)v_{02} + i\frac{\eta}{r}\left\{\left[r(a_3' - ik_3a_1)\right]' + k_2k_3a_2 - \frac{1}{r}k_2^2a_3\right\} - i\frac{d\eta}{dT}\frac{T_1}{r}(rB_{02})'	
 	\end{aligned}
 \end{equation}
 
@@ -140,17 +140,17 @@ Tildes are dropped below for convenience.
 									&~~~~ 	- i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}\left(\frac{k_2}{\eps}B_{02} + k_3B_{03}\right)T_1 
 											+ i(\gamma -1)\frac{1}{\eps}\left[\eps\kappa_\bot\left(\frac{T_1}{\eps}\right)'\right]'																						\\
 									&~~~~ - i(\gamma - 1)\frac{\kappa_\bot}{\eps}\left(\frac{k_2^2}{\eps^2} + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{\eps}\left(\eps\kappa_{\bot, 1}T_0'\right)'						\\
-									&~~~~ + i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]	\\
+									&~~~~ + i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}T_0'\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]	\\
 									&~~~~ - i(\gamma - 1)\HL_0\frac{1}{\eps}\rho_1 - i(\gamma - 1)\frac{1}{\eps}\rho_0\left(\HL_T T_1 + \HL_\rho\rho_1\right)															\\
 									&~~~~ +2i(\gamma - 1)\eta\left\{B_{03}'\left[\left(\frac{1}{\eps}\left(a_2' - k_2a_1\right)\right)' + \frac{1}{\eps}k_2k_3a_3 - \frac{k_3^2}{\eps}a_2\right]	\right.				\\
-									&~~~~ \left. \qquad\qquad\qquad ~ -\frac{(\eps B_{02})'}{\eps^2}\left[\left(\eps\left(a_3' - k_2a_1\right)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right]\right\} \\
+									&~~~~ \left. \qquad\qquad\qquad ~ -\frac{(\eps B_{02})'}{\eps^2}\left[\left(\eps\left(a_3' - k_3a_1\right)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right]\right\} \\
 									&~~~~ + i(\gamma - 1)\frac{d\eta}{dT}\frac{T_1}{\eps}\left[B_{02}'^2 + B_{03}'^2 + 2\frac{\eps'}{\eps}B_{02}B_{02}' + \left(\frac{\eps'}{\eps}B_{02}\right)^2\right]				\\[8pt]
 	\omega a_1						&= -B_{03}v_2 + \frac{1}{\eps}B_{02}v_3 - \frac{1}{\eps}v_{02}a_2' - v_{03}a_3' + \left(\frac{k_2}{\eps}v_{02} + k_3v_{03}\right)a_1												\\
 									&~~~~ +i\eta\left[-\left(\frac{k_2^2}{\eps^2} + k_3^2\right)a_1 + \frac{k_2}{\eps^2}a_2' + k_3a_3'\right]																			\\[8pt]
 	\omega \frac{a_2}{\eps}			&= -\frac{1}{\eps}B_{03}v_1 - \frac{1}{\eps}\left(k_2a_3 -k_3a_2\right)v_{03} 
 								  + i\eta\left[\left(\frac{1}{\eps}(a_2' - k_2a_1)\right)' + \frac{1}{\eps}k_2k_3a_3 - \frac{k_3^2}{\eps}a_2\right] - i\frac{d\eta}{dT}\frac{T_1}{\eps}B_{03}'							\\[8pt]
 	\omega a_3						&= \frac{1}{\eps}B_{02}v_1 + \frac{1}{\eps}\left(k_2a_3 - k_3a_2\right)v_{02}				
-								  + i\frac{\eta}{\eps}\left[\left(\eps(a_3' - k_2a_1)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right] - i\frac{d\eta}{dT}\frac{T_1}{\eps^2}(\eps B_{02})'
+								  + i\frac{\eta}{\eps}\left[\left(\eps(a_3' - k_3a_1)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right] - i\frac{d\eta}{dT}\frac{T_1}{\eps^2}(\eps B_{02})'
 \end{align*}
 \endgroup
 
@@ -196,10 +196,11 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 	A_{jk}(1, 3) &=  \int \left[\frac{1}{\eps}\rho_0 k_2\right] h_j^1 h_k^3 dr																			\\
 	A_{jk}(1, 4) &=  \int \left[\frac{1}{\eps}\rho_0 k_3\right] h_j^1 h_k^4 dr																			\\
 	A_{jk}(2, 1) &=  \left[\frac{T_0}{\eps}\right] h_j^2 h_k^1 - \int \left[\frac{T_0}{\eps}\right] \frac{dh_j^2}{dr} h_k^1 dr - \int \left[\frac{\eps'}{\eps^2}v_{02}^2\right]h_j^2h_k^1 dr + \int \left[\frac{1}{\eps}g\right]h_j^2h_k^1 dr			\\
-	A_{jk}(2, 2) &=  \int \left[\frac{1}{\eps}\left(\frac{v_{02}k_2}{\eps} + v_{03}k_3\right)\rho_0\right]h_j^2h_k^2 dr									\\
+	A_{jk}(2, 2) &=  \int \left[\frac{1}{\eps}\left(\frac{1}{\eps}v_{02}k_2 + v_{03}k_3\right)\rho_0\right]h_j^2h_k^2 dr								\\
 	A_{jk}(2, 3) &= -\int \left[2\frac{\eps'}{\eps}\rho_0v_{02}\right]h_j^2 h_k^3 dr																	\\
 	A_{jk}(2, 5) &=  \left[\frac{\rho_0}{\eps}\right]h_j^2 h_k^5 dr - \int \left[\frac{\rho_0}{\eps}\right]\frac{dh_j^2}{dr}h_k^5 dr					\\
-	A_{jk}(2, 6) &=  \int \left[\frac{(\eps B_{02})'}{\eps}k_3 + \frac{\eps'}{\eps}B_{02}k_3 -\left(\frac{B_{03}}{\eps}\right)'k_2\right] h_j^2 h_k^6 dr  + \int \left[B_{02}k_3 - \frac{1}{\eps}B_{03}k_2\right] h_j^2 \frac{dh_k^6}{dr} 				\\
+	A_{jk}(2, 6) &=  \left[B_{02}k_3 - \frac{1}{\eps}B_{03}k_2\right] h_j^2 h_k^6 + \int \left[\frac{(\eps B_{02})'}{\eps}k_3 - \eps k_3\left(\frac{B_{02}}{\eps}\right)'\right] h_j^2 h_k^6 dr		\\
+				 &+  \int \left[\frac{1}{\eps}k_2B_{03} - k_3B_{02}\right]\frac{dh_j^2}{dr}h_k^6 dr 			\\
 	A_{jk}(2, 7) &=  \left[\frac{B_{03}}{\eps}\right] h_j^2 \frac{dh_k^7}{dr} - \int \left[B_{03}\frac{k_3^2}{\eps} + B_{02}\frac{k_2k_3}{\eps^2}\right] h_j^2 h_k^7 dr - \int \left[\frac{B_{03}}{\eps}\right]\frac{dh_j^2}{dr}\frac{dh_k^7}{dr}dr		\\
 	A_{jk}(2, 8) &=  -\left[B_{02}\right]h_j^2\frac{dh_k^8}{dr} + \int \left[B_{03}\frac{k_2k_3}{\eps} + B_{02}\frac{k_2^2}{\eps^2}\right] h_j^2 h_k^8 dr - \int \left[2B_{02}\frac{\eps'}{\eps}\right]h_j^2 \frac{dh_k^8}{dr} dr	
 					+\int \left[B_{02}\right]\frac{dh_j^2}{dr}\frac{dh_k^8}{dr}dr																		\\
@@ -218,39 +219,46 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 	A_{jk}(4, 7) &=  \int \left[\frac{1}{\eps}B_{03}'k_3\right] h_j^4 h_k^7 dr - \int \left[B_{02}\frac{k_2}{\eps^2}\right] h_j^4 \frac{dh_k^7}{dr}dr   \\
 	A_{jk}(4, 8) &= -\int \left[\frac{1}{\eps}B_{03}'k_2\right] h_j^4 h_k^8 dr - \int \left[B_{02}k_3\right] h_j^4 \frac{dh_k^8}{dr} dr					\\
 	A_{jk}(5, 1) &=  \left[i(\gamma - 1)\frac{1}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial \rho}\right] h_j^5 h_k^1 - \int \left[i(\gamma - 1)\frac{1}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial \rho}\right] \frac{dh_j^5}{dr} h_k^1 dr		\\
-				 &~~~~ +\int \left[i(\gamma - 1)\frac{1}{\eps}\left(\frac{\eps'}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial \rho} - \HL_0 - \rho_0\HL_\rho\right)\right] h_j^5h_k^1 dr																\\
+				 &+  \int \left[i(\gamma - 1)\frac{1}{\eps}\left(\frac{\eps'}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial \rho} - \HL_0 - \rho_0\HL_\rho\right)\right] h_j^5h_k^1 dr																	\\
 	A_{jk}(5, 2) &= -\int \left[\frac{1}{\eps}\rho_0T_0'\right] h_j^5h_k^2 dr - \int \left[(\gamma - 1)\frac{1}{\eps}\rho_0T_0\right] h_j^5\frac{dh_k^2}{dr} dr	\\
 	A_{jk}(5, 3) &=  \int \left[(\gamma - 1)\frac{1}{\eps}\rho_0T_0k_2\right] h_j^5 h_k^3 dr															\\
 	A_{jk}(5, 4) &=  \int \left[(\gamma - 1)\frac{1}{\eps}\rho_0T_0k_3\right] h_j^5 h_k^4 dr															\\
-	A_{jk}(5, 5) &=  \left[\frac{1}{\eps}i(\gamma - 1)\left(T_0'\frac{\partial \kappa_\bot}{\partial T} - \frac{\eps'}{\eps}\kappa_\bot\right)\right] h_j^5 h_k^5 + \left[\frac{1}{\eps}i(\gamma - 1)\kappa_\bot\right]h_j^5 \frac{dh_k^5}{dr} 			\\
-				 &~~~~ -\int \left[\frac{1}{\eps}i(\gamma - 1)\left\{(\kappa_\parallel - \kappa_\bot)\frac{1}{B^2}\left(\frac{k_2}{\eps}B_{02} + k_3B_{03}\right) + \left(\frac{\eps'}{\eps}\right)^2\kappa_\bot
+	A_{jk}(5, 5) &=  \left[i(\gamma - 1)\frac{1}{\eps}\left(T_0'\frac{\partial \kappa_\bot}{\partial T} - \frac{\eps'}{\eps}\kappa_\bot\right)\right] h_j^5 h_k^5 + \left[i(\gamma - 1)\frac{1}{\eps}\kappa_\bot\right]h_j^5 \frac{dh_k^5}{dr} 			\\
+				 &-  \int \left[i(\gamma - 1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{1}{B^2}\left(\frac{k_2}{\eps}B_{02} + k_3B_{03}\right) + \left(\frac{\eps'}{\eps}\right)^2\kappa_\bot
 				 																																								   + \kappa_\bot\left(\frac{k_2^2}{\eps^2} + k_3^2\right)\right.\right. \\
-				 &\qquad\qquad\qquad\qquad~~~~ 									  \left.\left.+ \rho_0\HL_T - \frac{1}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial T}\right\} \right] h_j^5h_k^5 dr													\\
-				 &~~~~ +\int \left[\frac{1}{\eps}\rho_0\left(\frac{k_2}{\eps}v_{02} + k_3v_{03}\right)\right] h_j^5 h_k^5 dr 
-				 	   +\int\left[\frac{1}{\eps}i(\gamma - 1)\left(\frac{\eps'}{\eps}\kappa_\bot - T_0'\frac{\partial \kappa_\bot}{\partial T}\right)\right] \frac{dh_j^5}{dr} h_k^5 dr																	\\
-				 &~~~~ +\int\left[\frac{\eps'}{\eps^2}i(\gamma - 1)\kappa_\bot\right] h_j^5 \frac{dh_k^5}{dr} dr - \int \left[\frac{1}{\eps}i(\gamma - 1)\kappa_\bot\right] \frac{dh_j^5}{dr}\frac{dh_k^5}{dr} dr										\\
-	A_{jk}(5, 6) &=  \left[i(\gamma - 1)\frac{1}{\eps}2T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 h_k^6	\\
-				 &~~~~ + \int \left[i(\gamma - 1)\frac{\eps'}{\eps}2T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 h_k^6 dr																					\\
-				 &~~~~ - \int \left[i(\gamma - 1)\frac{1}{\eps}2T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)}\right] \frac{dh_j^5}{dr} h_k^6 dr																			\\
-	A_{jk}(5, 7) &=  \left[i(\gamma - 1)\frac{2}{\eps}T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^7}{dr} 
-												 + \int \left[i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps} \frac{1}{B^2}(k_2k_3B_{02} + k_3^2B_{03})T_0'\right] h_j^5 h_k^7 dr 															\\
-				 &~~~~ + \int \left[i(\gamma - 1)\frac{\eps'}{\eps^2}2T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^7}{dr}dr
-				 								 - \int \left[i(\gamma - 1)\frac{2}{\eps}T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] \frac{dh_j^5}{dr}\frac{dh_k^7}{dr} dr																\\
-	A_{jk}(5, 8) &= -\left[i(\gamma - 1)2T_0'B_{02}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^8}{dr} 
-												 - \int \left[i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{T_0'}{B^2}(k_2^2B_{02} + k_2k_3B_{03})\right] h_j^5 h_k^8 dr	 															\\
-				 &~~~~ - \int \left[i(\gamma - 1)\frac{\eps'}{\eps}2T_0'B_{02}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^8}{dr} dr																								
-				 								 + \int \left[i(\gamma - 1)2T_0'B_{02}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] \frac{dh_j^5}{dr} \frac{dh_k^8}{dr} dr																			\\
+				 &\qquad\qquad\qquad\qquad~~~~ 									  \left.\left.+ \rho_0\HL_T - \frac{\eps'}{\eps}T_0'\frac{\partial \kappa_\bot}{\partial T}\right\} \right] h_j^5h_k^5 dr												\\
+				 &+  \int \left[\frac{1}{\eps}\rho_0\left(\frac{k_2}{\eps}v_{02} + k_3v_{03}\right)\right] h_j^5 h_k^5 dr 
+				 	   +\int\left[i(\gamma - 1)\frac{1}{\eps}\left(\frac{\eps'}{\eps}\kappa_\bot - T_0'\frac{\partial \kappa_\bot}{\partial T}\right)\right] \frac{dh_j^5}{dr} h_k^5 dr																	\\
+				 &+  \int\left[i(\gamma - 1)\frac{\eps'}{\eps^2}\kappa_\bot\right] h_j^5 \frac{dh_k^5}{dr} dr - \int \left[i(\gamma - 1)\frac{1}{\eps}\kappa_\bot\right] \frac{dh_j^5}{dr}\frac{dh_k^5}{dr} dr											\\
+				 &+  \int\left[i(\gamma - 1)\frac{1}{\eps}\frac{d\eta}{dT}\left\{B_{02}'^2 + B_{03}'^2 + 2\frac{\eps'}{\eps}B_{02}B_{02}' + \left(\frac{\eps'}{\eps}B_{02}\right)^2\right\}\right] h_j^5 h_k^5 dr										\\
+	A_{jk}(5, 6) &=  \left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)} - \eta B_{03}'k_2 + \eta k_3(\eps B_{02})' \right\} \right] h_j^5 h_k^6											\\
+				 &+  \int\left[2i(\gamma-1)\left\{T_0'\frac{\eps'}{\eps^2}(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial\kappa_\bot}{\partial(B^2)} + \frac{1}{\eps}k_2(\eta B_{03}')' 
+				 										- \eps k_3\left(\eta \frac{(\eps B_{02})'}{\eps^2}\right)'\right\}\right] h_j^5 h_k^6 dr																										\\
+				 &-  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial\kappa_\bot}{\partial(B^2)} - \eta k_2B_{03}' + \eta k_3(\eps B_{02})' \right\}\right] \frac{dh_j^5}{dr}h_k^6 dr							\\[10pt]
+	A_{jk}(5, 7) &=  \left[2i(\gamma-1)\frac{1}{\eps}\left(T_0'B_{03}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta B_{03}'\right)\right] h_j^5 \frac{dh_k^7}{dr}																						\\
+				 &+  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2k_3B_{02} + k_3^2B_{03}) - 2\eta k_3^2 B_{03}' - 2\eta k_2k_3\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^7 dr				\\
+				 &+  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\eps'}{\eps}\frac{\partial\kappa_\bot}{\partial(B^2)} - (\eta B_{03}')'\right\}\right] h_j^5 \frac{dh_k^7}{dr} dr														\\
+				 &-  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta B_{03}'\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^7}{dr} dr																	\\
+	A_{jk}(5, 8) &=  -\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02}')}{\eps}\right\}\right] h_j^5 \frac{dh_k^8}{dr}																			\\
+				 &-  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2^2 B_{02} + k_2k_3B_{03}) - 2\eta k_2k_3B_{03}' - 2\eta k_2^2\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^8 dr				\\
+				 &-  \int\left[2i(\gamma-1)\left\{T_0'\frac{\eps'}{\eps}B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} - \eps\left(\eta\frac{(\eps B_{02})'}{\eps^2}\right)'\right\}\right]h_j^5 \frac{dh_k^8}{dr} dr									\\
+				 &+  \int\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02})'}{\eps}\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^8}{dr} dr															\\
 	A_{jk}(6, 3) &= -\int \left[B_{03}\right] h_j^6 h_k^3 dr								\\
-	A_{jk}(6, 4) &= -\int \left[\frac{1}{\eps}B_{02}\right] h_j^6 h_k^4 dr					\\
-	A_{jk}(6, 6) &=  \int \left[\frac{k_2}{\eps}v_{02} + k_2v_{03}\right] h_j^6 h_k^6 dr	\\
-	A_{jk}(6, 7) &= -\int \left[\frac{1}{\eps}v_{02}\right] h_j^6 \frac{dh_k^7}{dr} dr		\\
-	A_{jk}(6, 8) &= -\int \left[v_{03}\right] h_j^6 \frac{dh_k^8}{dr} dr					\\
+	A_{jk}(6, 4) &=  \int \left[\frac{1}{\eps}B_{02}\right] h_j^6 h_k^4 dr					\\
+	A_{jk}(6, 6) &=  \int \left[\frac{1}{\eps}k_2 v_{02} + k_3v_{03} - i\eta\left(\frac{1}{\eps^2}k_2^2 + k_3^2\right)\right] h_j^6 h_k^6 dr	\\
+	A_{jk}(6, 7) &= -\int \left[\frac{1}{\eps}v_{02} - i\eta\frac{1}{\eps^2}k_2\right] h_j^6 \frac{dh_k^7}{dr} dr		\\
+	A_{jk}(6, 8) &= -\int \left[v_{03} - i\eta k_3\right] h_j^6 \frac{dh_k^8}{dr} dr		\\
 	A_{jk}(7, 2) &= -\int \left[\frac{1}{\eps}B_{03}\right] h_j^7 h_k^2 dr					\\
-	A_{jk}(7, 7) &=  \int \left[\frac{1}{\eps}k_3v_{03}\right] h_j^7 h_k^7 dr				\\
-	A_{jk}(7, 8) &= -\int \left[\frac{1}{\eps}k_2v_{03}\right] h_j^7 h_k^8 dr				\\
+	A_{jk}(7, 5) &= -\int \left[i\frac{1}{\eps}\frac{d\eta}{dT}B_{03}'\right] h_j^7 h_k^5 dr 		\\
+	A_{jk}(7, 6) &=  \left[i\eta \frac{1}{\eps} k_2\right] h_j^7 h_k^6 - \int \left[i\eta \frac{1}{\eps} k_2 \right] \frac{dh_j^7}{dr} h_k^6 dr	\\
+	A_{jk}(7, 7) &=  \left[i\eta \frac{1}{\eps}\right] h_j^7 \frac{dh_k^7}{dr} + \int \left[\frac{1}{\eps}k_3\left(v_{03} - i\eta k_3\right)\right] h_j^7 h_k^7 dr - \int \left[i\eta \frac{1}{\eps}\right]\frac{dh_j^7}{dr}\frac{dh_k^7}{dr} dr	  \\
+	A_{jk}(7, 8) &= -\int \left[\frac{1}{\eps}k_2\left(v_{03} - i\eta k_3\right)\right] h_j^7 h_k^8 dr				\\
 	A_{jk}(8, 2) &=  \int \left[\frac{1}{\eps}B_{02}\right] h_j^8 h_k^2 dr					\\
-	A_{jk}(8, 7) &= -\int \left[\frac{1}{\eps}k_3v_{02}\right] h_j^8 h_k^7 dr				\\
-	A_{jk}(8, 8) &=  \int \left[\frac{1}{\eps}k_2v_{02}\right] h_j^8 h_k^8 dr				
+	A_{jk}(8, 5) &= -\int \left[i\frac{1}{\eps^2}\frac{d\eta}{dT}(\eps B_{02})'\right] h_j^8 h_k^5 dr			\\
+	A_{jk}(8, 6) &= -\left[i\eta k_3\right] h_j^8 h_k^6 - \int \left[i\eta \frac{\eps'}{\eps}k_3\right] h_j^8 h_k^6 dr + \int \left[i\eta k_3\right] \frac{dh_j^8}{dr} h_k^6 dr			\\
+	A_{jk}(8, 7) &= -\int \left[\frac{1}{\eps}k_3\left(v_{02} - i\eta\frac{1}{\eps}k_2\right)\right] h_j^8 h_k^7 dr				\\
+	A_{jk}(8, 8) &=  \left[i\eta\right] h_j^8 \frac{dh_k^8}{dr} + \int \left[\frac{1}{\eps}k_2\left(v_{02} - i\eta\frac{1}{\eps}k_2\right)\right] h_j^8 h_k^8 dr + \int \left[i\eta \frac{\eps'}{\eps}\right] h_j^8 \frac{dh_k^8}{dr} dr
+							- \int \left[i\eta\right] \frac{dh_j^8}{dr} \frac{dh_k^8}{dr} dr		\\				
 \end{align*}
 All other matrix elements are equal to zero.
 \endgroup
@@ -266,7 +274,7 @@ Matrix elements for matrix B:
 														\end{minipage}
 \end{enumerate}
 
-\newpage\noindent
+\noindent
 Matrix elements for matrix A:
 \begin{enumerate}
 	\item \makebox[3cm][l]{\textbf{Qua~ $\times$ Qua~:}} \begin{minipage}[t]{13cm}
@@ -280,22 +288,19 @@ Matrix elements for matrix A:
 														  A(1, 2), A(3, 7), A(3, 8), A(4, 7), A(4, 8), A(5, 2), A(5, 7), A(5, 8), A(6, 7), A(6, 8), {\color{blue} A(5, 7), A(5, 8)}
 														 \end{minipage} 
 	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Qua~:}} \begin{minipage}[t]{13cm}
-														 A(2, 1), A(2, 3), A(2, 6), {\color{blue} A(2, 1), A(2, 5)}
+														 A(2, 1), A(2, 3), A(2, 6), A(7, 5), A(8, 5), A(8, 6), {\color{blue} A(2, 1), A(2, 5), A(2, 6), A(7, 6), A(8, 6)}
 														 \end{minipage}
 	\item \makebox[3cm][l]{\textbf{Cub' $\times$ Qua~:}} \begin{minipage}[t]{13cm}
-														  A(2, 1), A(2, 5)
+														  A(2, 1), A(2, 5), A(2, 6), A(7, 6), A(8, 6)
 														 \end{minipage} 
 	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Cub~:}} \begin{minipage}[t]{13cm}
 														  A(2, 2), A(2, 7), A(2, 8), A(7, 2), A(7, 7), A(7, 8), A(8, 2), A(8, 7), A(8, 8)
 														 \end{minipage} 
-	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Qua':}} \begin{minipage}[t]{13cm}
-														  A(2, 6)
-														 \end{minipage}
 	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Cub':}} \begin{minipage}[t]{13cm}
-														  A(2, 8), {\color{blue} A(2, 7), A(2, 8)}
+														  A(2, 8), A(8, 8), {\color{blue} A(2, 7), A(2, 8), A(7, 7), A(8, 8)}
 														 \end{minipage} 
 	\item \makebox[3cm][l]{\textbf{Cub' $\times$ Cub':}} \begin{minipage}[t]{13cm}
-														  A(2, 7), A(2, 8)
+														  A(2, 7), A(2, 8), A(7, 7), A(8, 8)
 														 \end{minipage} 
 	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Qua~:}}  \begin{minipage}[t]{13cm}
 														  A(5, 1), A(5, 5), A(5, 6)
@@ -306,7 +311,7 @@ Matrix elements for matrix A:
 	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Qua':}} \begin{minipage}[t]{13cm}
 														  A(5, 5)
 														 \end{minipage} 
-	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Cub~:}} \begin{minipage}[t]{13cm}
+	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Cub':}} \begin{minipage}[t]{13cm}
 														  A(5, 7), A(5, 8)
 														 \end{minipage}
 													 
