--- a/calculations/linearized_equations.tex
+++ b/calculations/linearized_equations.tex
@@ -239,7 +239,7 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 				 &+  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2k_3B_{02} + k_3^2B_{03}) - 2\eta k_3^2 B_{03}' - 2\eta k_2k_3\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^7 dr				\\
 				 &+  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\eps'}{\eps}\frac{\partial\kappa_\bot}{\partial(B^2)} - (\eta B_{03}')'\right\}\right] h_j^5 \frac{dh_k^7}{dr} dr														\\
 				 &-  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta B_{03}'\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^7}{dr} dr																	\\
-	A_{jk}(5, 8) &=  -\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02}')}{\eps}\right\}\right] h_j^5 \frac{dh_k^8}{dr}																			\\
+	A_{jk}(5, 8) &=  -\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02})'}{\eps}\right\}\right] h_j^5 \frac{dh_k^8}{dr}																			\\
 				 &-  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2^2 B_{02} + k_2k_3B_{03}) - 2\eta k_2k_3B_{03}' - 2\eta k_2^2\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^8 dr				\\
 				 &-  \int\left[2i(\gamma-1)\left\{T_0'\frac{\eps'}{\eps}B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} - \eps\left(\eta\frac{(\eps B_{02})'}{\eps^2}\right)'\right\}\right]h_j^5 \frac{dh_k^8}{dr} dr									\\
 				 &+  \int\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02})'}{\eps}\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^8}{dr} dr															\\
