--- a/utils/linearized_equations.tex
+++ b/utils/linearized_equations.tex
@@ -103,7 +103,7 @@ Derivations in cylindrical coordinates, explicitly done to see how the scale fac
 		\omega \rho_0 T_1 &= -i\rho_0v_1T_0' +\rho_0\left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)T_1 - i(\gamma - 1)\rho_0T_0\left[\frac{1}{r}(rv_1)' + \frac{1}{r}ik_2v_2 + ik_3v_3\right]												\\
 						  &~~~~ - i(\gamma - 1)(\kappa_\parallel - \kappa_\bot)\frac{1}{B^2}\left(\frac{1}{r}k_2B_{02} + k_3B_{03}\right)^2T_1 + i(\gamma - 1)\frac{1}{r}(r\kappa_\bot T_1')'											\\
 					      &~~~~ - i(\gamma - 1)\kappa_\bot\left(\frac{1}{r^2}k_2^2 + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{r}(r\kappa_{\bot, 1}T_0')'																					\\
-						  &~~~~ + i(\gamma - 1)(\kappa_\bot - \kappa_\parallel)\frac{1}{B^2}T_0'\left[(B_{03}k_3^2 + B_{02}k_2k_3)a_2 - \frac{1}{r}(B_{02}k_2^2 + B_{03}k_2k_3)a_3\right]													\\
+						  &~~~~ + i(\gamma - 1)(\kappa_\bot - \kappa_\parallel)\frac{1}{B^2}T_0'\left[(B_{03}k_3^2 + \frac{1}{r}B_{02}k_2k_3)a_2 - \frac{1}{r}(B_{02}k_2^2\frac{1}{r} + B_{03}k_2k_3)a_3\right]													\\
 						  &~~~~ - i(\gamma - 1)\rho_1\HL_0 - i(\gamma - 1)\rho_0(\HL_T T_1 + \HL_\rho \rho_1)																															\\
 						  &~~~~ +2i(\gamma - 1)\eta\left\{B_{03}'\left[\left(\frac{1}{r}\left((ra_2)' - ik_2a_1\right)\right)' + \frac{1}{r}k_2k_3a_3 - k_3^2a_2\right]\right.															\\
 						  &~~~~ \left. \qquad\qquad\qquad  ~ -\frac{(rB_{02})'}{r^2}\left[\left(r(a_3' - ik_3a_1)\right)' + k_2k_3a_2 - \frac{1}{r}k_2^2a_3\right] \right\} 															\\
@@ -140,7 +140,7 @@ Tildes are dropped below for convenience.
 									&~~~~ 	- i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}\left(\frac{k_2}{\eps}B_{02} + k_3B_{03}\right)T_1 
 											+ i(\gamma -1)\frac{1}{\eps}\left[\eps\kappa_\bot\left(\frac{T_1}{\eps}\right)'\right]'																						\\
 									&~~~~ - i(\gamma - 1)\frac{\kappa_\bot}{\eps}\left(\frac{k_2^2}{\eps^2} + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{\eps}\left(\eps\kappa_{\bot, 1}T_0'\right)'						\\
-									&~~~~ + i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}T_0'\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]	\\
+									&~~~~ + i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}T_0'\left[\left(k_2k_3B_{02}\frac{1}{\eps} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02}\frac{1}{\eps} + k_2k_3B_{03}\right)a_3\right]	\\
 									&~~~~ - i(\gamma - 1)\HL_0\frac{1}{\eps}\rho_1 - i(\gamma - 1)\frac{1}{\eps}\rho_0\left(\HL_T T_1 + \HL_\rho\rho_1\right)															\\
 									&~~~~ +2i(\gamma - 1)\eta\left\{B_{03}'\left[\left(\frac{1}{\eps}\left(a_2' - k_2a_1\right)\right)' + \frac{1}{\eps}k_2k_3a_3 - \frac{k_3^2}{\eps}a_2\right]	\right.				\\
 									&~~~~ \left. \qquad\qquad\qquad ~ -\frac{(\eps B_{02})'}{\eps^2}\left[\left(\eps\left(a_3' - k_3a_1\right)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right]\right\} \\
@@ -148,7 +148,7 @@ Tildes are dropped below for convenience.
 	\omega a_1						&= -B_{03}v_2 + \frac{1}{\eps}B_{02}v_3 - \frac{1}{\eps}v_{02}a_2' - v_{03}a_3' + \left(\frac{k_2}{\eps}v_{02} + k_3v_{03}\right)a_1												\\
 									&~~~~ +i\eta\left[-\left(\frac{k_2^2}{\eps^2} + k_3^2\right)a_1 + \frac{k_2}{\eps^2}a_2' + k_3a_3'\right]																			\\[8pt]
 	\omega \frac{a_2}{\eps}			&= -\frac{1}{\eps}B_{03}v_1 - \frac{1}{\eps}\left(k_2a_3 -k_3a_2\right)v_{03} 
-								  + i\eta\left[\left(\frac{1}{\eps}(a_2' - k_2a_1)\right)' + \frac{1}{\eps}k_2k_3a_3 - \frac{k_3^2}{\eps}a_2\right] - i\frac{d\eta}{dT}\frac{T_1}{\eps}B_{03}'							\\[8pt]
+								  + i\eta\left[\left(\frac{1}{\eps}(a_2' - k_2a_1)\right)' + \frac{1}{\eps}k_2k_3a_3 - \frac{k_3^2}{\eps}a_2\right] + i\frac{d\eta}{dT}\frac{T_1}{\eps}B_{03}'							\\[8pt]
 	\omega a_3						&= \frac{1}{\eps}B_{02}v_1 + \frac{1}{\eps}\left(k_2a_3 - k_3a_2\right)v_{02}				
 								  + i\frac{\eta}{\eps}\left[\left(\eps(a_3' - k_3a_1)\right)' + \frac{1}{\eps}k_2k_3a_2 - \frac{k_2^2}{\eps}a_3\right] - i\frac{d\eta}{dT}\frac{T_1}{\eps^2}(\eps B_{02})'
 \end{align*}
@@ -236,11 +236,11 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 				 										- \eps k_3\left(\eta \frac{(\eps B_{02})'}{\eps^2}\right)'\right\}\right] h_j^5 h_k^6 dr																										\\
 				 &-  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial\kappa_\bot}{\partial(B^2)} - \eta k_2B_{03}' + \eta k_3(\eps B_{02})' \right\}\right] \frac{dh_j^5}{dr}h_k^6 dr							\\[10pt]
 	A_{jk}(5, 7) &=  \left[2i(\gamma-1)\frac{1}{\eps}\left(T_0'B_{03}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta B_{03}'\right)\right] h_j^5 \frac{dh_k^7}{dr}																						\\
-				 &+  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2k_3B_{02} + k_3^2B_{03}) - 2\eta k_3^2 B_{03}' - 2\eta k_2k_3\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^7 dr				\\
+				 &+  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2k_3B_{02}\frac{1}{\eps} + k_3^2B_{03}) - 2\eta k_3^2 B_{03}' - 2\eta k_2k_3\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^7 dr				\\
 				 &+  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\eps'}{\eps}\frac{\partial\kappa_\bot}{\partial(B^2)} - (\eta B_{03}')'\right\}\right] h_j^5 \frac{dh_k^7}{dr} dr														\\
 				 &-  \int\left[2i(\gamma-1)\frac{1}{\eps}\left\{T_0'B_{03}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta B_{03}'\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^7}{dr} dr																	\\
 	A_{jk}(5, 8) &=  -\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02})'}{\eps}\right\}\right] h_j^5 \frac{dh_k^8}{dr}																			\\
-				 &-  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2^2 B_{02} + k_2k_3B_{03}) - 2\eta k_2k_3B_{03}' - 2\eta k_2^2\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^8 dr				\\
+				 &-  \int\left[i(\gamma-1)\frac{1}{\eps}\left\{(\kappa_\parallel - \kappa_\bot)\frac{T_0'}{B^2}(k_2^2 B_{02}\frac{1}{\eps} + k_2k_3B_{03}) - 2\eta k_2k_3B_{03}' - 2\eta k_2^2\frac{(\eps B_{02})'}{\eps^2}\right\}\right] h_j^5 h_k^8 dr				\\
 				 &-  \int\left[2i(\gamma-1)\left\{T_0'\frac{\eps'}{\eps}B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} - \eps\left(\eta\frac{(\eps B_{02})'}{\eps^2}\right)'\right\}\right]h_j^5 \frac{dh_k^8}{dr} dr									\\
 				 &+  \int\left[2i(\gamma-1)\left\{T_0' B_{02}\frac{\partial\kappa_\bot}{\partial(B^2)} + \eta\frac{(\eps B_{02})'}{\eps}\right\}\right] \frac{dh_j^5}{dr}\frac{dh_k^8}{dr} dr															\\
 	A_{jk}(6, 3) &= -\int \left[B_{03}\right] h_j^6 h_k^3 dr								\\
@@ -249,8 +249,8 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 	A_{jk}(6, 7) &= -\int \left[\frac{1}{\eps}v_{02} - i\eta\frac{1}{\eps^2}k_2\right] h_j^6 \frac{dh_k^7}{dr} dr		\\
 	A_{jk}(6, 8) &= -\int \left[v_{03} - i\eta k_3\right] h_j^6 \frac{dh_k^8}{dr} dr		\\
 	A_{jk}(7, 2) &= -\int \left[\frac{1}{\eps}B_{03}\right] h_j^7 h_k^2 dr					\\
-	A_{jk}(7, 5) &= -\int \left[i\frac{1}{\eps}\frac{d\eta}{dT}B_{03}'\right] h_j^7 h_k^5 dr 		\\
-	A_{jk}(7, 6) &=  \left[i\eta \frac{1}{\eps} k_2\right] h_j^7 h_k^6 - \int \left[i\eta \frac{1}{\eps} k_2 \right] \frac{dh_j^7}{dr} h_k^6 dr	\\
+	A_{jk}(7, 5) &=  \int \left[i\frac{1}{\eps}\frac{d\eta}{dT}B_{03}'\right] h_j^7 h_k^5 dr 		\\
+	A_{jk}(7, 6) &= -\left[i\eta \frac{1}{\eps} k_2\right] h_j^7 h_k^6 + \int \left[i\eta \frac{1}{\eps} k_2 \right] \frac{dh_j^7}{dr} h_k^6 dr	\\
 	A_{jk}(7, 7) &=  \left[i\eta \frac{1}{\eps}\right] h_j^7 \frac{dh_k^7}{dr} + \int \left[\frac{1}{\eps}k_3\left(v_{03} - i\eta k_3\right)\right] h_j^7 h_k^7 dr - \int \left[i\eta \frac{1}{\eps}\right]\frac{dh_j^7}{dr}\frac{dh_k^7}{dr} dr	  \\
 	A_{jk}(7, 8) &= -\int \left[\frac{1}{\eps}k_2\left(v_{03} - i\eta k_3\right)\right] h_j^7 h_k^8 dr				\\
 	A_{jk}(8, 2) &=  \int \left[\frac{1}{\eps}B_{02}\right] h_j^8 h_k^2 dr					\\
